--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,5 @@ body {
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    border-color: #f39407;
+    background-color: #f39407;
 }
