Add styling to the ball

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,15 @@ body {
 }
 
 .ball {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 100px auto;
     height: 100px;
     width: 100px;
     border-radius: 50%;
+    font-size: 25px;
     background-color: #f39407;
     transition: 1s;
+    cursor: pointer;
 }
